[package]
name = "example-server"
version = "0.1.0"
authors = ["EthanYidong <ethanyidong@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmots = { path = "../../" }

serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"

tokio = { version = "1.0", features = ["full"] }